divs dont function as anticipated

--- a/gridtimed.html
+++ b/gridtimed.html
@@ -225,8 +225,8 @@
             </div>
             <!-- entire body can be wrapped in fieldset-->
     </form>
-    </div> <!-- end control button DIV-->
-        
+</div> <!-- end control button DIV-->
+        <div>FUCK YOU CSS</div>
    <!--  <fieldset class="ui-grid-a" style="background-color: yellow"> -->
 <!-- fieldset may be outside first div, but not inside as it will hide everything with current
 show() hide() conditional logic-->
