--- a/gridtimed.html
+++ b/gridtimed.html
@@ -43,14 +43,28 @@
             $('span').css("visibility", "visible");
             return false;
         }
-        function resetClock(){
+        function resetClock(){ 
+        // actually RESETS loads of STUFF
+        // require a better solution
+        // params to be reset { #second: visibility, clock: 00:00:00, div: pointer-events & opacity, allInput buttons: removeAttributes, checkboxradion, nextQuestions button: pointer-events&opacity }
+            $('#second').hide(); // shouldn't be necessary, but just in case
             ThurtySeconds.resetCountdown();
             $('span').css("visibility", "hidden");
-            $('div').css({"pointer-events": "auto", "opacity": "1"});
+            $('div').css({"pointer-events": "auto", "opacity": "1"}); // all divs that had opacity altered reset
+            $('#flip').css({"pointer-events": "none", "opacity": "0.6"}); //reset the flip button
             $(':input','#first').removeAttr('checked').checkboxradio("refresh");
-            $('div').not('.ui-loader').show();
+            $(':input','#second').removeAttr('checked').checkboxradio("refresh");
+            //$(':input').removeAttr('checked').checkboxradio("refresh"); // unknown why, but this throws error
+            $('div').not('.ui-loader, #second').show();
             //$('#first').css("opacity", "0.2"); <- this line is death
             return false;
+        }
+
+        function nextQuestions(){
+            $('#first').hide(); 
+            // this is necessary at present only because the current parentsUntil logic hides all the divs within #first, but not #first
+            console.log("this is flip");
+            $('div').not('.ui-loader, #first').show(); // add additional qualifier class for hidden questions
         }
 
         function toggleRadio(){
@@ -61,7 +75,7 @@
             $('div').not('.ui-loader').show();
             return false;
         }
-
+// above and below = same function
         $(function(){
             $('#toggle').click(function(){ // the below are bound to button with ID of toggle
                 forEachIn($(':input','#first'), function(k,v){console.log("is checked?"+v.checked);});
@@ -73,11 +87,6 @@
                     // this works, key to unhiding elements, shorter than above, not() rather than filter because I use parents until and wrapper divs to construct the questions
             });
         });
-
-
-        function flip(){
-            $('div').not('.ui-loader','first').show(); // add additional qualifier class for hidden questions
-        }
 
         var ThurtySeconds = new function() { // I have here amended from self invoking, and called init() outside
             var $countdown,
@@ -108,10 +117,10 @@
                     console.log($countdown);
                     ThurtySeconds.Timer = $.timer(updateTimer, incrementTime, false);
                     $form = $('#ctrlButtons'); // its not fussy about what element it is bound to apparently
-
+                    // however I will need to be fussy because this makes any button press reset the timer
                     $form.bind('submit', function() {
-                        ThurtySeconds.resetCountdown();
-                        return false;
+                        //ThurtySeconds.resetCountdown();
+                        return false; // prevent resubmission of page behaviour default
                     });
 
                 };
@@ -141,7 +150,7 @@
                 {'name':"ten"}
                 ];
 
-            for(var x=0; x<5; x++){ //JSON.length
+            for(var x=0; x<JSON.length; x++){ //JSON.length
                 // prepend the vals of array of objects to html elements with an ID selector matching object keys
                 var elm = $("#"+JSON[x].name);
                 console.log(elm);
@@ -149,14 +158,15 @@
             }
             // set the first to invisible until the button is pressed
             $('.statement').css("visibility", "hidden"); // set to hidden until button
+            console.log($('div','#second'));
+            $('#second').hide();
         });
 
         $(function() {
             // this function is always awaiting change!
             $flip = 0;
-            $('input').change(function(){
-                console.log("an input click detected!");
-                console.log($(this).context.checked);
+            $(':input','#first').change(function(){ // this also works
+            //$('input').change(function(){
                 if($(this).context.checked = true) {
                     $flip++;
                         // conditional logic for checked value changge
@@ -168,18 +178,29 @@
                             $(this).parentsUntil( $('#first') ).css({"opacity": "0.6","pointer-events": "none"});
                         }
                 }
-                if($flip>= 5){
+                if($flip>= 5){ // permit press of the flip button, incorporation of prior permitFlip function
                     $('#flip').css({
                     "pointer-events": "auto",
                     "opacity": "1"
                     });
                 }
-            }); // end input.change
+            }); // end input.change for first
 
+            $(':input','#second').change(function(){
+                console.log("an input click detected!");
+                console.log($(this).context.checked);
+                if($(this).context.checked = true) {
+
+                        // conditional logic for checked value changge
+                        if($(this).context.className == "guessed"){
+
+                            $(this).parentsUntil( $('#second') ).hide(); // would be nice if identifier could be passed as param
+                        } else if ($(this).context.className == "skip") {
+                            $(this).parentsUntil( $('#second') ).css({"opacity": "0.6","pointer-events": "none"});
+                        }
+                }
+            }); // end input.change for second
         }); // end function
-        function permitFlip(){ // ensure flip button disengaged until all questions answered
-
-        };
 
     </script>
     <style type="text/css">
@@ -191,13 +212,14 @@
             font-weight: bold;
             padding-right: 25px;
             text-shadow: 0px 1px 1px #fff;
+            text-align:center;
         }
     </style>
 </head>
 <body>
-<div id="ctrlButtons" style="background-color: yellow">
+<div id="ctrlButtons">
     <span id="countdown">00:30:00</span>
-    <!-- <form id="ThurtySeconds" style="background-color: yellow"> -->
+    <form id="ThurtySeconds">
 
 
 <!-- these illustrate how you can access the timer functions contained within jQuery.timer directly via ThurtySeconds object
@@ -213,7 +235,7 @@
                 and it contains a stop.once method -->
             </div>
             <div class="ui-block-c">
-                <button id='flip' class="ui-btn" style="pointer-events:none;opacity:0.2" onclick="return flip()">Next Questions</button>
+                <button id='flip' class="ui-btn" style="pointer-events:none;opacity:0.2" onclick="return nextQuestions()">Next Questions</button>
                 <!-- <button class="ui-btn" onclick="return toggleRadio()">Toggle</button> trigger toggle via function bound to click in javascript convention-->
                  <!-- <input type='button' id='toggle' class="ui-btn" value='Toggle' /> 
                  trigger toggle via always on jQUery function that recognises change in state of DOM element and #id indentifier-->
@@ -226,16 +248,14 @@
                 <!-- <input type='button' class="ui-btn" value='Reset Clock' onclick='ThurtySeconds.resetCountdown();'/> -->
             </div>
             <!-- entire body can be wrapped in fieldset-->
-    <!-- </form> -->
+    </form>
 </div> <!-- end control button DIV-->
-<fieldset style="height: auto;background-color: pink">FUCK YOU CSS!!!</fieldset>
-        <div>FUCK YOU CSS</div>
-   <!--  <fieldset class="ui-grid-a" style="background-color: yellow"> -->
+   <!--  <fieldset class="ui-grid-a"> -->
 <!-- fieldset may be outside first div, but not inside as it will hide everything with current
 show() hide() conditional logic-->
-        <div  id="first" style="background-color: red">
+        <div  id="first">
 
-                <div style="height: auto;background-color: yellow">
+                <div style>
                 <div id="one" class="statement"></div> <!-- these first are not parents of radio buttons because of the grid formatting issue. This means they cannot be accessed via parentsUntil, but a div above them can -->
                     <!-- <div id = "one" class="ui-block-a"></div> this can be used if statement desired to left of buttons-->
                     <div class="ui-block-b">
@@ -249,7 +269,7 @@ show() hide() conditional logic-->
                     </div>
                 </div> <!-- nameless div necessary to avail of parentsUntil logic-->
 
-                <div style="height: auto;">
+                <div style>
                     <div id="two" class="statement"></div>
                     <!-- <div id = "two" class="ui-block-a"></div> this can be used if statement desired to left of buttons -->
                     <div class="ui-block-b">
@@ -262,7 +282,7 @@ show() hide() conditional logic-->
                     </div>
                 </div>
 
-                <div style="height: auto">
+                <div style>
                     <div id="three" class="statement"></div>
                         <!-- <div id = "three" class="ui-block-a"></div> this can be used if statement desired to left of buttons -->
                         <div class="ui-block-b">
@@ -276,7 +296,7 @@ show() hide() conditional logic-->
                         </div>
                 </div>
 
-                <div style="height: auto">
+                <div style>
                     <div id="four" class="statement"></div>
                         <!-- <div id = "four" class="ui-block-a"></div> this can be used if statement desired to left of buttons -->
                         <div class="ui-block-b">
@@ -290,7 +310,7 @@ show() hide() conditional logic-->
                         </div>
                 </div>
 
-                <div style="height: auto; background-color:green">
+                <div style>
                     <div id="five" class="statement"></div>
                     <!-- <div id = "five" class="ui-block-a"></div> this can be used if statement desired to left of buttons -->
                     <div class="ui-block-b">
@@ -304,9 +324,8 @@ show() hide() conditional logic-->
                     </div>
                 </div>
         </div> <!-- end first -->
-<fieldset style="height: auto;background-color: pink">!!!</fieldset>
     <!-- </fieldset> -->
-        <div id="flip" style="background-color: blue">
+        <div id="second">  <!-- style="display:none" -->
 
                 <div style="height: auto">
                 <div id="six" class="statement"></div> <!-- these first are not parents of radio buttons because of the grid formatting issue. This means they cannot be accessed via parentsUntil, but a div above them can -->
@@ -376,7 +395,7 @@ show() hide() conditional logic-->
                       <label class="skip" name="skip" for="skip10">Skip?</label>
                     </div>
                 </div>
-        </div> <!-- end first -->
+        </div> <!-- end flip -->
 <!-- </fieldset> -->
 
 </form>
