--- a/gridtimed.html
+++ b/gridtimed.html
@@ -241,13 +241,6 @@
     <span id="countdown">00:30:00</span>
     <!-- <form id="ThurtySeconds"> no need for form when no vals are entered-->
 
-<!-- **RESEARCH - make informed decision WRT which button trigger method = jQuery best practice ** -->
-<!-- these illustrate how you can access the timer functions contained within jQuery.timer directly via ThurtySeconds object
-         <input type='button' value='Play/Pause' onclick='ThurtySeconds.Timer.toggle();' /> -->
-        <!-- init function creates the Timer object-->
-        <!-- <input type='button' value='Stop/Reset' onclick='ThurtySeconds.resetCountdown();' /> -->
-    
-            <!-- <fieldset class="ui-grid-d"> -->
             <!-- Buttons to Let the Games Begin! -->
             <div class="ui-block-c">
                 <button class="ui-btn" onclick="return commence();">Start</button>
@@ -257,15 +250,14 @@
             <div class="ui-block-c">
                 <button id='flip' class="ui-btn" style="pointer-events:none;opacity:0.2" onclick="return nextQuestions()">Next Questions</button>
                 <!-- <button class="ui-btn" onclick="return toggleRadio()">Toggle</button> trigger toggle via function bound to click in javascript convention-->
-                 <!-- <input type='button' id='toggle' class="ui-btn" value='Toggle' /> 
+                 <!-- <input type='button' id='toggle' class="ui-btn" value='Toggle' this was example of binding a function rather than return onClick /> 
                  trigger toggle via always on jQUery function that recognises change in state of DOM element and #id indentifier-->
             <br>
             </div>
             <div class="ui-block-a"></div>
             <div class="ui-block-c">
                 <button class="ui-btn" value='Stop/Reset' onclick='return resetClock();'>Reset</button>
-                <!-- the above isn't bound, and so reset countdown is triggered twice -->
-                <!-- <input type='button' class="ui-btn" value='Reset Clock' onclick='ThurtySeconds.resetCountdown();'/> -->
+
             </div>
             <div class="ui-block-b">
             <ul class="score" id="teamA">SCORE A:</ul>
